# code-obituary

./: .gitignore  README.md  blog-post.md  pyproject.toml
.github/workflows/: ci.yml
src/code_obituary/: __init__.py  analyzer.py  cli.py  graveyard.py  hook.py
tests/: __init__.py  test_analyzer.py  test_graveyard.py
